release/iperf-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iperf3-server
  labels:
    app: iperf3-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iperf3-server
  template:
    metadata:
      labels:
        app: iperf3-server
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
      - name: iperf3
        image: networkstatic/iperf3
        args: ["-s"]
        ports:
        - containerPort: 5201
---
apiVersion: v1
kind: Service
metadata:
  name: iperf3-server
spec:
  type: NodePort
  selector:
    app: iperf3-server
  ports:
  - name: tcp
    port: 5201
    targetPort: 5201
    nodePort: 32001
    protocol: TCP
